--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 <body>
   <div class="page-wrap">
     <div class="book-library">
-      <div class="library-header">Book Library</div>
+      <h1 class="library-header">Book Library</h1>
 
       <!-- Book 1 -->
       <div class="book">
@@ -17,9 +17,9 @@
                alt="Spy in the Amber - cover">
         </div>
         <div class="meta">
-          <div class="title">Spy in the Amber</div>
-          <div class="author">By Manohar Malgonkar</div>
-          <a class="price" href="#buy">Rs. 299</a>
+          <h2 class="title">Spy in the Amber</h2>
+          <p class="author">By Manohar Malgonkar</p>
+          <div class="price">Rs. 299</div>
         </div>
       </div>
 
@@ -30,22 +30,22 @@
                alt="Sacred Games - cover">
         </div>
         <div class="meta">
-          <div class="title">Sacred Games</div>
-          <div class="author">By Vikram Chandra</div>
-          <a class="price" href="#buy">Rs. 199</a>
+          <h2 class="title">Sacred Games</h2>
+          <p class="author">By Vikram Chandra</p>
+          <div class="price">Rs. 199</div>
         </div>
       </div>
 
-      <!-- Book 3 (replace placeholder URL with your real cover link if you have one) -->
+      <!-- Book 3 -->
       <div class="book">
         <div class="cover">
-          <!-- Replace the src below with your third image link -->
+          <!-- Replace this src with your actual third book cover if needed -->
           <img src="https://via.placeholder.com/150x220?text=Byomkesh+Bakshi" alt="Byomkesh Bakshi - cover">
         </div>
         <div class="meta">
-          <div class="title">Byomkesh Bakshi</div>
-          <div class="author">By Sharadindu Bandyopadhyay</div>
-          <a class="price" href="#buy">Rs. 249</a>
+          <h2 class="title">Byomkesh Bakshi</h2>
+          <p class="author">By Sharadindu Bandyopadhyay</p>
+          <div class="price">Rs. 249</div>
         </div>
       </div>
 
